--- a/account_due_list/views/payment_view.xml
+++ b/account_due_list/views/payment_view.xml
@@ -12,7 +12,7 @@
             <field name="arch" type="xml">
                 <tree string="Payments" colors="grey:reconcile_id!=False;red:date_maturity&lt;current_date">
                     <field name="stored_invoice_id" readonly="1"/>
-                    <button name="action_view_invoice" string="Open Invoice" type="object" icon="gtk-print"/>
+                    <button name="action_view_invoice" string="Open Invoice" type="object" icon="gtk-zoom-in"/>
                     <field name="invoice_date" readonly="1"/>
                     <!--<field name="invoice_origin" readonly="1"/>-->
                     <field name="partner_id" string="Partner" readonly="1"/>
