--- a/product_pricelist_extended/views/product_product_view.xml
+++ b/product_pricelist_extended/views/product_product_view.xml
@@ -11,33 +11,66 @@
 
                 <page string="Suppliers" position="after">
 
-                    <page string="Customer" groups="product_bom.group_sell_price" attrs="{'invisible':[('sale_ok', '=', False)]}">
+                    <page string="Customer" groups="product_bom.group_sell_price"
+                          attrs="{'invisible':[('sale_ok', '=', False)]}">
 
-                        <field colspan="4" name="generic_pricelist_ids" nolabel="1" context="{'product_id': id, 'form_view_ref': 'profile_giolo.product_pricelist_version_simply_form_view'}" readonly="1">
-                            <tree string="Customs Rate List" colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
+                        <field colspan="4" name="generic_pricelist_ids" nolabel="1"
+                               context="{'product_id': id, 'form_view_ref': 'profile_giolo.product_pricelist_version_simply_form_view'}"
+                               readonly="1">
+                            <tree string="Customs Rate List"
+                                  colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
                                 <field name="row_color" invisible="1"/>
-                                <field name="pricelist_id" />
+                                <field name="pricelist_id"/>
                                 <field name="name"/>
-                                <field name="pricelist_rule_id" />
-                                <field name="price" />
-                                <field name="price_error" />
+                                <field name="pricelist_rule_id"/>
+                                <field name="price"/>
+                                <field name="price_error"/>
                                 <field name="date_start"/>
                                 <field name="date_end"/>
                             </tree>
+                            <form string="Pricelist Version">
+                                <group col="4" colspan="4">
+                                    <field name="price"/>
+                                    <field name="price_error" invisible="1"/>
+                                    <field name="pricelist_rule_id"
+                                           attrs="{'invisible': [('price_error','!=', False)]}"/>
+                                    <field name="date_start" select="1"/>
+                                    <field name="date_end" select="1"/>
+                                </group>
+                                <group col="4" colspan="4">
+                                    <field name="partner_ids" nolabel="1" colspan="4"/>
+                                </group>
+                            </form>
 
                         </field>
 
-                        <field colspan="4" name="partner_pricelist_ids" nolabel="1" context="{'product_id': id, 'form_view_ref': 'profile_giolo.product_pricelist_version_simply_form_view'}" readonly="1">
-                            <tree string="Customs Rate List" colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
+                        <field colspan="4" name="partner_pricelist_ids" nolabel="1"
+                               context="{'product_id': id, 'form_view_ref': 'profile_giolo.product_pricelist_version_simply_form_view'}"
+                               readonly="1">
+                            <tree string="Customs Rate List"
+                                  colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
                                 <field name="row_color" invisible="1"/>
-                                <field name="pricelist_id" />
+                                <field name="pricelist_id"/>
                                 <field name="partner_id"/>
-                                <field name="pricelist_rule_id" />
-                                <field name="price" />
-                                <field name="price_error" />
+                                <field name="pricelist_rule_id"/>
+                                <field name="price"/>
+                                <field name="price_error"/>
                                 <field name="date_start"/>
                                 <field name="date_end"/>
                             </tree>
+                            <form string="Pricelist Version">
+                                <group col="4" colspan="4">
+                                    <field name="price"/>
+                                    <field name="price_error" invisible="1"/>
+                                    <field name="pricelist_rule_id"
+                                           attrs="{'invisible': [('price_error','!=', False)]}"/>
+                                    <field name="date_start" select="1"/>
+                                    <field name="date_end" select="1"/>
+                                </group>
+                                <group col="4" colspan="4">
+                                    <field name="partner_ids" nolabel="1" colspan="4"/>
+                                </group>
+                            </form>
 
                         </field>
                     </page>
