--- a/account_invoice_filter/views/account_invoice_view.xml
+++ b/account_invoice_filter/views/account_invoice_view.xml
@@ -30,6 +30,7 @@
                     <field name="year" string="Year" />
                 </field>
                 <field name="partner_id" position="after">
+                    <field domain="[('type','&lt;&gt;','view'), ('parent_id', '!=', False)]" name="account_analytic_id" groups="analytic.group_analytic_accounting"/>
                     <field name="product_id"/>
                     <field name="origin" />
                 </field>
