--- a/sale_order_confirm/views/sale_order_menu.xml
+++ b/sale_order_confirm/views/sale_order_menu.xml
@@ -5,9 +5,9 @@
             <field name="groups_id" eval="[(6, 0, [ref('account.group_account_invoice')])]" />
         </record>
 
-        <menuitem id="base.menu_aftersale">
+        <record id="base.menu_aftersale">
             <field name="groups_id" eval="[(6, 0, [ref('sale.view_after_sale_service')])]" />
-        </menuitem>
+        </record>
 
         <record id="action_order_form_quotation_smart" model="ir.actions.act_window">
             <field name="name">Quotation Orders Smart</field>
