--- a/sale_order_confirm/views/sale_order_menu.xml
+++ b/sale_order_confirm/views/sale_order_menu.xml
@@ -5,7 +5,7 @@
             <field name="groups_id" eval="[(6, 0, [ref('account.group_account_invoice')])]" />
         </record>
 
-        <record id="base.menu_aftersale">
+        <record id="base.menu_aftersale" model="ir.ui.menu">
             <field name="groups_id" eval="[(6, 0, [ref('sale.view_after_sale_service')])]" />
         </record>
 
