--- a/product_pricelist_extended/views/product_product_view.xml
+++ b/product_pricelist_extended/views/product_product_view.xml
@@ -15,7 +15,7 @@
                           attrs="{'invisible':[('sale_ok', '=', False)]}">
 
                         <field colspan="4" name="generic_pricelist_ids" nolabel="1"
-                               context="{'product_id': id, 'form_view_ref': 'profile_giolo.product_pricelist_version_simply_form_view'}"
+                               context="{'product_id': id, 'form_view_ref': 'product_pricelist_extended.product_pricelist_version_simply_form_view'}"
                                readonly="1">
                             <tree string="Customs Rate List"
                                   colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
@@ -32,7 +32,7 @@
                         </field>
 
                         <field colspan="4" name="partner_pricelist_ids" nolabel="1"
-                               context="{'product_id': id, 'form_view_ref': 'profile_giolo.product_pricelist_version_simply_form_view'}"
+                               context="{'product_id': id, 'form_view_ref': 'product_pricelist_extended.product_pricelist_version_simply_form_view'}"
                                readonly="1">
                             <tree string="Customs Rate List"
                                   colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
