--- a/product_pricelist_extended/views/product_product_view.xml
+++ b/product_pricelist_extended/views/product_product_view.xml
@@ -24,6 +24,7 @@
                                 <field name="name"/>
                                 <field name="pricelist_rule_id"/>
                                 <field name="price"/>
+                                <field name="price_uos" groups="product.group_uos"/>
                                 <field name="price_error"/>
                                 <field name="date_start"/>
                                 <field name="date_end"/>
@@ -41,6 +42,7 @@
                                 <field name="partner_id"/>
                                 <field name="pricelist_rule_id"/>
                                 <field name="price"/>
+                                <field name="price_uos" groups="product.group_uos"/>
                                 <field name="price_error"/>
                                 <field name="date_start"/>
                                 <field name="date_end"/>
