--- a/purchase_requisition_extended/views/purchase_requisition_view.xml
+++ b/purchase_requisition_extended/views/purchase_requisition_view.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
     <data>
+
+        <record id="purchase_requisition_search" model="ir.ui.view">
+            <field name="name">purchase.requisition.search</field>
+            <field name="model">purchase.requisition</field>
+            <field name="inherit_id" ref="purchase_requisition.view_purchase_requisition_filter"/>
+            <field name="type">search</field>
+            <field name="arch" type="xml">
+                <data>
+                    <field name="name" position="before">
+                        <field name="warehouse_id" widget="selection" />
+                        <field name="product_id"/>
+                    </field>
+                </data>
+            </field>
+        </record>
+
         <record id="purchase_requisition_all_suppliers_form" model="ir.ui.view">
             <field name="name">purchase.requisition.all.suppliers.form</field>
             <field name="model">purchase.requisition</field>
