--- a/sale_bom/views/inherit_sale_order.xml
+++ b/sale_bom/views/inherit_sale_order.xml
@@ -11,6 +11,11 @@
                 <field name="product_id" position="after">
                     <field name="with_bom" invisible="True" />
                 </field>
+
+                <xpath expr="//field[@name='order_line' or @name='abstract_line_ids']/tree//field[@name='name']"
+                       position="before">
+                    <field name="with_bom" groups="base.group_system"/>
+                </xpath>
                 
                 <xpath expr="//field[@name='order_line' or @name='abstract_line_ids']/form/notebook" position="inside">
                     <page string="Bom" attrs="{'invisible': [('with_bom', '=', False)]}">
