extend onchange for have also uos coeff conversion

--- a/dt_price_security/views/product_view.xml
+++ b/dt_price_security/views/product_view.xml
@@ -12,7 +12,7 @@
                 <data>
                     <field name="list_price" position="replace">
                         <field name="list_price"
-                               on_change="onchange_list_price(list_price)"/>
+                               on_change="onchange_list_price(list_price, uos_coeff, context)"/>
                         <field name="list_price_copy" />
                     </field>
                     
