--- a/l10n_it_ade/views/account_tax_view.xml
+++ b/l10n_it_ade/views/account_tax_view.xml
@@ -9,12 +9,15 @@
             <field name="arch" type="xml">
                 <notebook position="inside">
                     <page string="Italy AdE">
-                        <group>
+                        <group string = "IVA">
                             <field name="non_taxable_nature"></field>
                             <field name="law_reference" attrs="{'required': [('non_taxable_nature', '!=', False),('type_tax_use', '!=', 'purchase')], 'invisible': ['|',('non_taxable_nature', '=', False),('type_tax_use', '=', 'purchase')]}"></field>
                             <field name="payability"></field>
                         </group>
-                        <field name="withholding_tax"/>
+                        <group string="Ritenuta Acconto">
+                            <field name="withholding_tax"/>
+                            <field name="causale_pagamento_id"/>
+                        </group>
                     </page>
                 </notebook>
             </field>
