--- a/sale_bom/views/inherit_sale_order.xml
+++ b/sale_bom/views/inherit_sale_order.xml
@@ -12,6 +12,10 @@
                     <field name="with_bom" invisible="True" />
                 </field>
 
+                <field name="order_line" position="attributes">
+                    <attribute name="context">{'partner_id': partner_id, 'pricelist_id': pricelist_id, 'date_order': date_order, 'fiscal_position': fiscal_position}</attribute>
+                </field>
+
                 <xpath expr="//field[@name='order_line' or @name='abstract_line_ids']/tree//field[@name='name']"
                        position="before">
                     <field name="with_bom" groups="base.group_system"/>
@@ -22,7 +26,7 @@
                         <!--
                         comment on 8 / 6 / 2015 for error   <field colspan="4" name="mrp_bom" nolabel="1" on_change="onchange_mrp_bom(mrp_bom, product_id)" context="{'default_sale_order_line': active_id}"  default_get="{'default_sale_order_line': active_id or False}">
                         -->
-                        <field colspan="4" name="mrp_bom" nolabel="1" on_change="onchange_mrp_bom(mrp_bom)" context="{'default_sale_order_line': active_id, 'partner_id': parent.partner_id, 'pricelist_id': context.get('pricelist_id'), 'date_order': context.get('date_order'), 'fiscal_position': context.get('fiscal_position')}" default_get="{'default_sale_order_line': active_id or False}">
+                        <field colspan="4" name="mrp_bom" nolabel="1" on_change="onchange_mrp_bom(product_id, mrp_bom, context)" context="{'default_sale_order_line': active_id, 'partner_id': parent.partner_id, 'pricelist_id': context.get('pricelist_id'), 'date_order': context.get('date_order'), 'fiscal_position': context.get('fiscal_position')}" default_get="{'default_sale_order_line': active_id or False}">
                             <tree string="Bom Line" editable="bottom" >
                                 <field name="order_id" invisible="1" />
                                 <field name="parent_id" readonly="1" />
