--- a/base_address_contacts/views/res_partner_address_view.xml
+++ b/base_address_contacts/views/res_partner_address_view.xml
@@ -242,6 +242,7 @@
                         <field name="city"/>
                         <field name="country_id"/>
                         <field name="phone"/>
+                        <field name="mobile"/>
                         <field name="fax" />
                         <field name="email" />
                     </tree>
