--- a/purchase_no_gap/views/purchase_view.xml
+++ b/purchase_no_gap/views/purchase_view.xml
@@ -29,9 +29,21 @@
             <field name="inherit_id" ref="purchase.view_purchase_order_filter"/>
             <field name="arch" type="xml">
                 <field name="name" position="replace" >
+                    <field name="shop_id" widget="selection" />
                     <field name="name" filter_domain="['|', ('name','ilike',self),('purchase_order_request','ilike',self)]" string="Reference"/>
                 </field>
+            </field>
+        </record>
 
+        <record id="view_purchase_order_no_gap_tree" model="ir.ui.view">
+            <field name="name">purchase.order.no_gap.tree</field>
+            <field name="model">purchase.order</field>
+            <field name="type">tree</field>
+            <field name="inherit_id" ref="purchase.purchase_order_tree"/>
+            <field name="arch" type="xml">
+                <field name="name" position="before" >
+                    <field name="shop_id"/>
+                </field>
             </field>
         </record>
     </data>
