--- a/account_invoice_extended/views/account_view.xml
+++ b/account_invoice_extended/views/account_view.xml
@@ -65,6 +65,10 @@
                 <field name="date_invoice" position="after">
                     <field name="supplier_invoice_number" invisible="context.get('type') == 'out_invoice'"/>
                 </field>
+                <field name="date_invoice" position="before">
+                    <field name="error_invoice" invisible="1" />
+                    <button name="show_error" string="" type="object" icon="gtk-dialog-error" attrs="{'invisible': [('error_invoice', '!=', True)]}" />
+                </field>
             </field>
         </record>
 
